jan 2nd batch loc

--- a/learn-certs-pr/azure-ai-engineer.yml
+++ b/learn-certs-pr/azure-ai-engineer.yml
@@ -2,18 +2,21 @@
 title: 'Microsoft Certified: Azure AI Engineer Associate'
 metadata:
   title: 'Microsoft Certified: Azure AI Engineer Associate'
-  description: 'Инженеры Azure AI используют Cognitive Services (когнитивные службы), Machine Learning (машинное обучение) и Knowledge Mining (майнинг знаний) для разработки и внедрения решений Microsoft AI, включающих обработку естественного языка, речь, компьютерное зрение, ботов и агентов.'
+  description: 'Инженеры Azure AI занимаются построением, управлением и развертыванием решений AI, использующих Azure Cognitive Services, Azure Cognitive Search и Microsoft Bot 
+  Фреймворк.'
 uid: certification.azure-ai-engineer
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
+  <div><font color='red'><strong>ЭКЗАМЕН AI-100 БУДЕТ ЗАМЕНЕН ЭКЗАМЕНОМ <a href='/learn/certifications/exams/ai-102'>EXAM AI-102</a> 23 ФЕВРАЛЯ 2021 ГОДА. Вы всё равно сможете получить этот сертификат, сдав экзамен AI-100 до его отмены 30 июня 2021 года.</strong></font><br/><br/></div>
+  
   Кандидаты на сертификат инженера-партнера Azure AI должны обладать специальными знаниями в области когнитивных служб, машинного обучения и интеллектуального анализа для разработки и реализации решений Microsoft AI, включающих обработку естественного языка, речь, компьютерное зрение и разговорный искусственный интеллект.
-
+  
   Обязанности этой роли включают анализ требований к решениям AI, рекомендацию соответствующих инструментов и технологий, а также разработку и внедрение решений на базе AI, отвечающих требованиям к масштабируемости и производительности.
-
+  
   Инженеры Azure AI транслируют видение, которым с ними делатся архитекторы решений, и работают с аналитиками данных, инженерами данных, специалистами по IoT и разработчиками программного обеспечения для создания завершенных комплексных решений.
-
+  
   Кандидат на получение сертификата должен обладать знаниями и опытом разработки и реализации приложений и агентов AI, которые используют Microsoft Azure Cognitive Services, службу Azure Bot, Azure Cognitive Search и хранилище данных в Azure. Кроме того, кандидат должен быть в состоянии рекомендовать решения, использующие технологии с открытым исходным кодом, понимать компоненты, составляющие портфель Azure AI, и доступные параметры хранения данных, а также понимать, когда следует разрабатывать пользовательский API для удовлетворения конкретных требований.
-subTitle: Инженеры Azure AI используют Cognitive Services (когнитивные службы), Machine Learning (машинное обучение) и Knowledge Mining (майнинг знаний) для разработки и внедрения решений Microsoft AI, включающих обработку естественного языка, речь, компьютерное зрение, ботов и агентов.
+subTitle: Инженеры Azure AI занимаются построением, управлением и развертыванием решений AI, использующих Azure Cognitive Services, Azure Cognitive Search и Microsoft Bot Фреймворк.
 levels:
 - intermediate
 skills:
