--- a/learn-certs-pr/courses/az-104t00.yml
+++ b/learn-certs-pr/courses/az-104t00.yml
@@ -25,17 +25,26 @@ exams:
 - uid: exam.az-104
 summary: |-
   В данном курсе учит ИТ-специалисты научатся, как управлять своими подписками Azure, защищать учетные записи, администрировать инфраструктуру, настраивать виртуальные сети, соединять Azure и локальные сайты, управлять сетевым трафиком, внедрять решения для хранения, создавать и масштабировать виртуальные машины, внедрять веб-приложения и контейнеры, осуществлять резервное копирование и обмен данными, а также проводить мониторинг своего решения.
-
+  
   #### Профиль аудитории
   Этот курс предназначен для администраторов Azure. Azure Administrator внедряет, управляет и следит за удостоверениями, управлением, хранением, вычислениями и виртуальными сетями в облачной среде. Администратор Azure обеспечивает, измеряет, отслеживает и корректирует ресурсы в зависимости от ситуации.
 prerequisitesSection: |-
-  Успешные администраторы Azure начинают исполнять эту роль, имея опыт в виртуализации, работе в сети, идентификации и хранении.
-  - Понимание локальных технологий виртуализации, включая&#58; виртуальные машины, виртуальные сети и виртуальные жесткие диски.
-  - Понимание конфигурации сети, включая TCP/IP, систему доменных имен (DNS), виртуальные частные сети (VPN), брандмауэры и технологии шифрования.
-  - Понимание концепций Active Directory, включая пользователей, группы и контроль доступа на основе ролей.
+  Успешные администраторы Azure начинают эту роль с наличием опыта работы с виртуализацией, сетями, идентификаторами и хранением.
+  - Понимание локальных технологий виртуализации, включая VM, виртуальные сети и виртуальные жесткие диски.
+  - Понимание настроек сети, включая TCP/IP, службу доменных имен (DNS), виртуальные частные сети (VPN), брандмауэры и технологии шифрования.
+  - Понимание концепций Active Directory, включая пользователей, группы и управление доступом на основе ролей.
   - Понимание устойчивости и аварийного восстановления, включая операции резервного копирования и восстановления.
-
-  Вы можете получить необходимую квалификацию и лучше понять Azure, пройдя курс [AZ-104&#58; Предварительные требования для администраторов Azure](/learn/paths/az-104-administrator-prerequisites/). Этот бесплатный онлайн-тренинг даст вам опыт, необходимый для успешного прохождения данного курса.
+  
+  Предварительные курсы (или эквивалентные знания и практический опыт)&#58;
+  
+  Это бесплатное онлайн-обучение даст вам опыт, необходимый для успешного прохождения этого курса.
+  - [Azure Fundamentals, часть 1&#58; описание основных понятий Azure - Learn | Microsoft Docs](/learn/paths/az-900-describe-cloud-concepts/)
+  - [Azure Fundamentals, часть 2&#58; описание основных Azure services - Learn | Microsoft Docs](/learn/paths/az-900-describe-core-azure-services/)
+  - [Azure Fundamentals, часть 3&#58; описание основных решений и инструментов управления на Azure - Learn | Microsoft Docs](/learn/paths/az-900-describe-core-solutions-management-tools-azure/)
+  - [Azure Fundamentals, часть 4&#58; описание общей безопасности и функций безопасности сети - Learn | Microsoft Docs](/learn/paths/az-900-describe-general-security-network-security-features/)
+  - [Azure Fundamentals, часть 5&#58; описание функций удостоверения, управления, конфиденциальности и соответствия](/learn/paths/az-900-describe-identity-governance-privacy-compliance-features/)
+  - [Azure Fundamentals, часть 6&#58; описание управления затратами Azure и соглашений об уровне обслуживания](/learn/paths/az-900-describe-azure-cost-management-service-level-agreements/)
+  - [AZ-104&#58; предварительные требования для администраторов Azure - Learn | Microsoft Docs](/learn/paths/az-104-administrator-prerequisites/)
 outlineSection: |-
   ### Модуль 1&#58; Удостоверение
   В этом модуле вы узнаете, как защищать удостоверения с помощью Azure Active Directory и внедрять пользователей и группы.
