--- a/learn-certs-pr/courses/az-303t00.yml
+++ b/learn-certs-pr/courses/az-303t00.yml
@@ -28,18 +28,19 @@ exams:
 - uid: exam.az-303
 summary: |-
   Этот курс позволяет Архитекторам решений (Solutions Architects) научиться преобразовывать бизнес-требования в безопасные, масштабируемые и надежные решения. Включены уроки по виртуализации, автоматизации, сетевому взаимодействию, хранению, идентификации, безопасности, платформе данных и инфраструктуре приложений. Этот курс описывает, как различные решения в каждой области влияют на общее решение.
-
+  
   #### Профиль аудитории
   Этот курс предназначен для IT-специалистов, имеющих опыт разработки и внедрения решений, работающих на Microsoft Azure. Они должны обладать обширным знанием IТ-операций, включая сетевые технологии, виртуализацию, идентификацию, безопасность, непрерывность бизнеса, аварийное восстановление, платформы данных, бюджетирование и управление. Azure Solution Architects используют Azure Portal, и по мере того, как они становятся более опытными, они начинают использовать интерфейс командной строки (CLI). Кандидаты должны быть экспертами в администрировании Azure и иметь опыт работы с процессами разработки Azure и процессами DevOps.
 prerequisitesSection: |-
   Успешные учащиеся на архитекторов Azure обладают предварительным опытом работы с операционными системами, визуализацией, инфраструктурой cloud, структурами хранения и сетями&#58;
-  - Понимание локальных технологий виртуализации, включая VMs и виртуальные сети. 
-  - Понимание конфигурации сети, включая TCP/IP, Domain Name System (DNS), virtual private networks (VPNs), брандмауэры и технологии шифрования. 
+  - Понимание локальных технологий виртуализации, включая VMs и виртуальные сети.
+  - Понимание конфигурации сети, включая TCP/IP, Domain Name System (DNS), virtual private networks (VPNs), брандмауэры и технологии шифрования.
   - Понимание понятий Active Directory, включая домены, леса и контроллеры доменов.
-
+  
   Если вы только начинаете знакомиться с Azure и вычислениями cloud, рекомендуем ознакомиться с одним из следующих ресурсов&#58;
   - бесплатный онлайн-ресурс&#58; Azure Fundamentals (https://docs.microsoft.com/learn/paths/azure-fundamentals/),
-  - курс под руководством инструктора&#58; AZ-900&#58; Azure Fundamentals (https://docs.microsoft.com/learn/certifications/courses/az-900t01).
+  - курс под руководством инструктора&#58; AZ-900&#58; Azure Fundamentals (https://docs.microsoft.com/learn/certifications/courses/az-900t01)
+  - Предварительные требования для администраторов Azure (https://docs.microsoft.com/learn/paths/az-104-administrator-prerequisites/)
 outlineSection: |-
   ### Модуль 1&#58; реализация Azure Active Directory
   В этом модуле вы узнаете, как обеспечить безопасность удостоверений с помощью Azure Active Directory и как реализовать пользователей и группы. Этот модуль включает&#58;
