--- a/learn-certs-pr/courses/az-304t00.yml
+++ b/learn-certs-pr/courses/az-304t00.yml
@@ -34,7 +34,7 @@ exams:
 - uid: exam.az-304
 summary: |-
   Этот курс позволяет Архитекторам решений (Solutions Architects) научиться преобразовывать бизнес-требования в безопасные, масштабируемые и надежные решения. Уроки включают в себя вопросы проектирования, связанные с ведением журнала, анализом затрат, аутентификацией и авторизацией, управлением, безопасностью, хранением, высокой доступностью и миграцией. Эта роль требует принятия решений в нескольких областях, которые влияют на общее проектное решение.
-
+  
   #### Профиль аудитории
   Этот курс предназначен для IT-специалистов, имеющих опыт разработки и внедрения решений, работающих на Microsoft Azure. Они должны обладать обширным знанием IТ-операций, включая сетевые технологии, виртуализацию, идентификацию, безопасность, непрерывность бизнеса, аварийное восстановление, платформы данных, бюджетирование и управление. Azure Solution Architects используют Azure Portal, и по мере того, как они становятся более опытными, они начинают использовать интерфейс командной строки (CLI). Кандидаты должны быть экспертами в администрировании Azure и иметь опыт работы с процессами разработки Azure и процессами DevOps.
 prerequisitesSection: |-
@@ -48,10 +48,11 @@ prerequisitesSection: |-
   - Понимание баз данных, как SQL, например, MS SQL, MySQL и Postgres, так и отличных от SQL, например, MongoDB. 
   - Понимание отделения приложений и служб, например, очередей, таблиц, кэша.  
   - Понимание понятий безопасности для защиты вашей среды, например, шифрования неактивных данных, шифрования данных при передаче, SSL, TLS.
-
+  
   Предварительные курсы (или эквивалентные знания)&#58;
-  - AZ-900 Azure Fundamentals.
-  - AZ-303 Azure Solution Architect Technologies. 
+  - Бесплатный онлайн-курс&#58; Azure Fundamentals (https://docs.microsoft.com/learn/paths/azure-fundamentals/)
+  - Курс под руководством инструктора&#58; AZ-900&#58; Azure Fundamentals (https://docs.microsoft.com/learn/certifications/courses/az-900t01)
+  - Предварительные требования для администраторов Azure (https://docs.microsoft.com/learn/paths/az-104-administrator-prerequisites/)
 outlineSection: |-
   ### Модуль 1&#58; Разработка вычислительных решений
   В этом модуле вы узнаете о соответствующих вычислительных технологиях, включая виртуальные машины, службы приложений App Services, Service Fabric, Azure Functions, Windows Virtual Desktop и контейнеры.
