--- a/learn-certs-pr/courses/az-500t00.yml
+++ b/learn-certs-pr/courses/az-500t00.yml
@@ -42,19 +42,25 @@ exams:
 - uid: exam.az-500
 summary: |-
   Этот курс предоставляет специалистам по ИТ-безопасности знания и навыки, необходимые для реализации мер безопасности, поддержания уровня безопасности организации, а также выявления и устранения уязвимостей безопасности. Этот курс включает в себя безопасность идентификации и доступа, защиту платформы, данных и приложений, а также операции по обеспечению безопасности.
-
+  
   #### Профиль аудитории
   Этот курс предназначен для инженеров по безопасности Azure, которые планируют сдать соответствующий сертификационный экзамен или которые выполняют задачи безопасности в своей повседневной работе. Этот курс также будет полезен инженеру, который хочет специализироваться на обеспечении безопасности цифровых платформ на базе Azure и играть важную роль в защите данных своей организации.
 prerequisitesSection: |-
-  Чтобы получить максимальную отдачу от этого курса, студенты должны&#58;
-  - Изучить передовой опыт безопасности и отраслевые требования безопасности, такие как глубокая защита, наименее привилегированный доступ, управление доступом на основе ролей, многофакторная аутентификация, совместная ответственность и модель нулевого доверия.
+  Успешные учащиеся обладают пониманием следующего/предварительными знаниями в следующем&#58;
+  - Лучшие практики в отношении безопасности и отраслевые требования безопасности, такие как углубленная защита, доступ с минимальными правами, управление доступом на основе ролей, многофакторная идентификация, общая ответственность и модель «Никому не доверяй».
   - Ознакомиться с такими протоколами безопасности, как виртуальные частные сети (VPN), протокол безопасности Интернета (IPSec), слой защищённых сокетов Secure Socket Layer (SSL), методы шифрования дисков и данных.
   - Иметь некоторый опыт развертывания рабочих нагрузок Azure. Этот курс не охватывает основ администрирования Azure. Содержание курса основывается на наличии у обучаемого этих знаний, добавляя к ним информацию, относящуюся к безопасности.
   - Вы должны иметь опыт работы с операционными системами Windows и Linux и языками сценариев. Лабораторные работы курса могут использовать PowerShell и интерфейс командной строки.
-
-  Чтобы подготовиться к этому уроку, вы можете пройти этот бесплатный онлайн-тренинг.
-  - [Основы Azure](/learn/paths/azure-fundamentals/)
-  - [AZ-104&#58; Предварительные требования для администраторов Azure](/learn/paths/az-104-administrator-prerequisites/)
+  
+  Предварительные курсы (или эквивалентные знания и практический опыт)&#58;
+  
+  Это бесплатное онлайн-обучение даст вам опыт, необходимый для успешного прохождения этого курса.
+  
+  - [AZ-104&#58; управление удостоверениями и управление в Azure - Learn | Microsoft Docs](/learn/paths/az-104-manage-identities-governance/)
+  - [AZ-104&#58; реализация и управление хранением в Azure - Learn | Microsoft Docs](/learn/paths/az-104-manage-storage/)
+  - [AZ-104&#58; настройка virtual networks для Azure administrators и управление ими - Learn | Microsoft Docs](/learn/paths/az-104-manage-virtual-networks/)
+  - [AZ-104&#58; мониторинг и архивирование ресурсов Azure - Learn | Microsoft Docs](/learn/paths/az-104-monitor-backup-resources/)
+  - [AZ-104&#58; развертывание вычислительных ресурсов Azure и управление ими - Learn | Microsoft Docs](/learn/paths/az-104-manage-compute-resources/)
 outlineSection: |-
   ### Модуль 1&#58; Управление идентификацией и доступом
   Этот модуль охватывает Azure Active Directory, защиту идентификации Azure Identity Protection, Управление предприятием Enterprise Governance, Управление привилегированной идентификацией Azure AD PIM и гибридную идентификацию Hybrid Identity.
