--- a/learn-certs-pr/courses/dp-200t01.yml
+++ b/learn-certs-pr/courses/dp-200t01.yml
@@ -29,25 +29,20 @@ products:
 exams:
 - uid: exam.dp-200
 summary: |-
-  В этом курсе слушатели будут учиться внедрять различные технологии платформы данных в решения, соответствующие бизнес-требованиям и техническим требованиям, включая собственные, облачные и гибридные сценарии работы с реляционными и No-SQL данными Слушатели также узнают, как обрабатывать данные с использованием ряда технологий и языков как для потоковой передачи, так и для пакетных данных.
-
-  Студенты также изучат способы обеспечения безопасности данных, включая аутентификацию, авторизацию, политики и стандарты данных. Они также определят и реализуют мониторинг решений для хранения и обработки данных. И, наконец, они будут управлять решениями для данных Azure и устранять неполадки, которые включают в себя оптимизацию и аварийное восстановление больших данных, пакетную обработку и решения для потоковой передачи данных.
-
+  В этом курсе учащиеся будут реализовывать различные технологии платформы данных в форме решений, соответствующих бизнес-требованиям и техническим требованиям, включая локальные и гибридные сценарии данных, а также сценарии cloud, включающие как реляционные данные, так и данные No-SQL. Учащиеся узнают, как обрабатывать дынные с использованием ряда технологий и языков как для потоковых, так и для пакетных данных.
+  
+  Учащиеся также изучат, как реализовывать безопасность данных, включая аутентификацию, авторизацию, политики и стандарты в отношении данных. Учащиеся также определят и реализуют мониторинг решения для операций хранения и обработки данных. Помимо вышеперечисленного, учащиеся будут управлять решениями по обработке данных Azure и устранять ошибки в таких решениях, включая оптимизацию и аварийное восстановление больших данных, пакетную обработку и решения для потоковой передачи данных.
+  
   #### Профиль аудитории
-  Основная аудитория этого курса - специалисты по данным, архитекторы данных и специалисты по бизнес-аналитике, которые хотят узнать о технологиях платформы данных, существующих в Microsoft Azure. Вторичной аудиторией этого курса являются люди, разрабатывающие приложения, которые доставляют контент из технологий платформы данных, существующих в Microsoft Azure.
+  Основная аудитория этого курса — специалисты в области данных, архитекторы данных и специалисты по бизнес-аналитике, желающие узнать о технологиях платформы данных, существующих на Microsoft Azure.
+  
+  Вторичная аудитория этого курса — лица, разрабатывающие приложения, предоставляющие контент с использованием технологий платформы данных, существующих на Microsoft Azure.
 prerequisitesSection: |-
-  Успешные учащиеся начинают этот курс со знаниями понятий облачных вычислений и профессиональным опытом работы с решениями для работы с данными. 
+  Успешные учащиеся начинают этот курс со знанием понятий вычислений cloud и основных понятий данных, а также профессиональным опытом работы с решениями для работы с данными.
   
-  В частности&#58;
-  - Создание облачных ресурсов на Microsoft Azure.
-  - Определение вариантов использования больших данных.
-  - Понимание того, как службы облачных вычислений могут служить для удовлетворения типичных потребностей бизнеса. 
-  
-  Для приобретения необходимых предварительных навыков перед прохождением курса пройдите следующее бесплатное онлайн-обучение&#58;
-  - [«Обзор облачных концепций Microsoft»](/learn/paths/explore-microsoft-azure-cloud-concepts/)
-  - [«Определение задач инженера данных»](/learn/modules/data-engineering-processes/)
-  - [«Основные облачные службы: варианты хранения данных Azure»](/learn/modules/intro-to-data-in-azure/)
-  - [«Основные облачные службы: варианты вычислений Azure»](/learn/modules/intro-to-azure-compute/)
+  В частности, проходят&#58;
+  - AZ-900 - Azure Fundamentals
+  - DP-900 - Microsoft Azure Data Fundamentals
 outlineSection: |-
   ### Модуль 1&#58; Azure для инженера данных
   Этот модуль посвящен изучению развития мира данных и тому, как технологии облачных платформ данных предоставляют предприятиям новые возможности для исследования своих данных различными способами. Слушателям будет представлен обзор различных доступных технологий платформ данных и того, как изменились роль и обязанности инженера данных в современных организациях.
