--- a/learn-certs-pr/d365-functional-consultant-marketing.yml
+++ b/learn-certs-pr/d365-functional-consultant-marketing.yml
@@ -6,15 +6,23 @@ metadata:
 uid: certification.d365-functional-consultant-marketing
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  Обладатели сертификата Microsoft Dynamics 365 для функциональных консультантов по маркетингу реализуют решения, которые привлекают и конвертируют лидов, повышают узнаваемость бренда, стандартизируют многоканальный обмен сообщениями и предоставляют маркетинговые идеи.
+  Если вы консультант по функциональным возможностям, специалист, использующий Microsoft Dynamics 365 Marketing в повседневной коммерческой деятельности своей организации, или разработчик, желающий отточить свои навыки консультирования, эта сертификация может дать толчок вашей карьере и позволить вам более эффективно позиционировать себя для участия в проектах и продвижения по службе.
+  
+  Для прохождения этой сертификации вы должны быть знакомы с приложениями на основе модели Dynamics 365 и принципами моделирования данных, а также уметь настраивать Microsoft Power Platform. Вы реализовываете маркетинговые инициативы, например, кампании, рассылки по электронной почте и циклы взаимодействия с клиентами. У вас есть опыт работы с заинтересованными лицами организации в целях сбора требований и реализации решений Dynamics 365 Marketing. В дополнение к этому вы настраиваете Dynamics 365 Marketing и параметры безопасности организации в Dynamics 365. Вы также можете расширять решения Dynamics 365 с использованием компонентов Power Platform, таких как Power Automate и Power Apps.
+  
+  Если перед попыткой прохождения этой сертификации вам нужно получить больше опыта, вот несколько рекомендаций&#58;
+  - Поработайте над проектом по реализации приложения на основе модели Dynamics 365.
+  - Понаблюдайте за работой консультанта по функциональным возможностям или архитектора решений, работающего с Dynamics 365 Marketing.
+  - Пройдите обучение по доступным схемам в Microsoft Learn.
+  - Зарегистрируйтесь на обучающий курс с инструктором.
 subTitle: Обладатели сертификата Microsoft Dynamics 365 для функциональных консультантов по маркетингу реализуют решения, которые привлекают и конвертируют лидов, повышают узнаваемость бренда, стандартизируют многоканальный обмен сообщениями и предоставляют маркетинговые идеи.
 levels:
 - intermediate
 skills:
-- Настраивать Common Data Service 
-- Создавать приложения с использованием Power Apps 
-- Создавать и управлять Power Automate 
-- Реализовывать чат-ботов Power Virtual Agents 
+- Настраивать Common Data Service
+- Создавать приложения с использованием Power Apps
+- Создавать и управлять Power Automate
+- Реализовывать чат-ботов Power Virtual Agents
 - Интегрировать Power Apps с другими приложениями и службами
 - Настройка маркетинговых приложений
 - Управление сегментами и списками
@@ -24,6 +32,11 @@ skills:
 - Управление перемещениями клиентов
 - Управление мероприятиями и вебинарами
 - Настраивать Dynamics 365 Customer Voice
+- Настраивать Common Data Service
+- Создавать приложения с использованием Power Apps
+- Создавать и управлять Power Automate
+- Реализовывать чат-ботов Power Virtual Agents
+- Интегрировать Power Apps с другими приложениями и службами
 roles:
 - functional-consultant
 type: role-based
