--- a/learn-certs-pr/d365-functional-consultant-sales.yml
+++ b/learn-certs-pr/d365-functional-consultant-sales.yml
@@ -7,19 +7,27 @@ uid: certification.d365-functional-consultant-sales
 certificationRenewalUid: renewal.d365-functional-consultant-sales
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  Microsoft Dynamics 365 для функциональных консультантов по продажам внедряет решения, которые предвидят и планируют связи с клиентами, управляют сделками посредством обработки и закрытия, а также ускоряют работу группы продаж с помощью анализа данных.
+  Если вы консультант по функциональным возможностям, специалист, работающий с Microsoft Dynamics 365 Sales, или разработчик, желающий отточить свои навыки консультирования, эта сертификация может дать толчок вашей карьере. Эта сертификация позволит вам более эффективно представлять себя для участия в проектах, а также поможет показать представителям вашей организации, что вы можете использовать Dynamics 365 Sales для повышения эффективности работы торгового персонала.
+  
+  Для прохождения этой сертификации у вас должен быть опыт настройки Microsoft Power Platform и вы должны быть знакомы с приложениями на основе модели Dynamics 365 и принципами моделирования данных. Вы работаете с заинтересованными лицами организации в целях сбора требований и реализации решений Dynamics 365 Sales. Вы управляете потенциальными клиентами, возможностями, предложениями и заказами и настраиваете каталоги продуктов и прайс-листы. В дополнение к этому вы настраиваете Dynamics 365 Sales для соответствия уникальному бизнес-процессу вашей организации и моделируете данные Dynamics 365 Sales. Вы также можете расширять решения Dynamics 365 с использованием компонентов Power Platform, таких как Power Automate и Power Apps.
+  
+  Если перед попыткой прохождения этой сертификации вам нужно получить больше опыта, вот несколько рекомендаций&#58;
+  - Поработайте над проектом по реализации приложения на основе модели Dynamics 365.
+  - Понаблюдайте за работой консультанта по функциональным возможностям или архитектора решений, работающего с Dynamics 365 Sales.
+  - Пройдите обучение по доступным схемам в Microsoft Learn.
+  - Зарегистрируйтесь на обучающий курс с инструктором.
 subTitle: Microsoft Dynamics 365 для функциональных консультантов по продажам внедряет решения, которые предвидят и планируют связи с клиентами, управляют сделками посредством обработки и закрытия, а также ускоряют работу группы продаж с помощью анализа данных.
 levels:
 - intermediate
 skills:
+- Выполнение настроек
+- Управление основными торговыми предприятиями
+- Настройка дополнительных инструментов и сервисов
 - Настраивать Common Data Service 
 - Создавать приложения с использованием Power Apps 
 - Создавать и управлять Power Automate 
 - Реализовывать чат-ботов Power Virtual Agents 
 - Интегрировать Power Apps с другими приложениями и службами
-- Выполнение настроек
-- Управление основными торговыми предприятиями
-- Настройка дополнительных инструментов и сервисов
 roles:
 - functional-consultant
 type: role-based
