--- a/learn-certs-pr/exams/ai-100.yml
+++ b/learn-certs-pr/exams/ai-100.yml
@@ -7,15 +7,16 @@ uid: exam.ai-100
 displayName: AI-100
 summary: |-
   <div>
+  <div><font color='red'><strong>НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, <a href='/learn/certifications/exams/ai-102'>AI-102</a>, СТАНЕТ ДОСТУПНА 23 ФЕВРАЛЯ 2021 ГОДА. Вы сможете сдать этот экзамен до его отмены 30 июня 2021 года. Примечание&#58; экзамены отменяются в 23&#58;59 по центральному времени.</strong></font><br/><br/></div>
   <div style='font-weight&#58; bold;'>Содержание этого экзамена было обновлено 20 мая 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/><br/></div>
   </div>
-
-  Кандидаты на этот экзамен должны иметь предметную экспертизу в  использовании когнитивных услуг, машинного обучения и интеллектуального анализа для разработки и реализации решений Microsoft AI, включающих обработку естественного языка, речь, компьютерное зрение и разговорный искусственный интеллект.
-
+  
+  Кандидаты на этот экзамен должны иметь предметную экспертизу в использовании когнитивных услуг, машинного обучения и интеллектуального анализа для разработки и реализации решений Microsoft AI, включающих обработку естественного языка, речь, компьютерное зрение и разговорный искусственный интеллект.
+  
   В обязанности инженера Azure AI входит анализ требований к решениям AI, предоставление рекомендаций по использованию соответствующих инструментов и технологий, а также разработка и внедрение решений AI, соответствующих требованиям к масштабируемости и производительности.
-
+  
   Инженеры Azure AI транслируют видение, которым с ними делатся архитекторы решений, и работают с аналитиками данных, инженерами данных, специалистами по IoT и разработчиками программного обеспечения для создания завершенных комплексных решений.
-
+  
   Кандидат на этот экзамен должен обладать знаниями и опытом проектирования и реализации приложений и агентов AI, которые используют Microsoft Azure Cognitive Services, службу Azure Bot, Azure Cognitive Search и хранилище данных в Azure. Кроме того, кандидат должен быть в состоянии рекомендовать решения, использующие технологии с открытым исходным кодом, понимать компоненты, составляющие портфель Azure AI, и доступные параметры хранения данных, а также понимать, когда следует разрабатывать пользовательский API для удовлетворения конкретных требований.
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: анализ требований к решению; разработка решения; интеграция модели AI в решения; а также развертывание и управление решениями.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -29,7 +30,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена было обновлено 20 мая 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.'
+- Содержание этого экзамена было обновлено 20 мая 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
 - Анализ требований к решению (25-30%)
 - Проектирование AI-решений (40-45%)
 - Внедрение и мониторинг AI-решений (25-30%)
