--- a/learn-certs-pr/exams/dp-200.yml
+++ b/learn-certs-pr/exams/dp-200.yml
@@ -7,13 +7,14 @@ uid: exam.dp-200
 displayName: DP-200
 summary: |-
   <div>
+  <div><font color='red'><strong>НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, <a href='/learn/certifications/exams/dp-203'>DP-203</a>, СТАНЕТ ДОСТУПНА 23 ФЕВРАЛЯ 2021 ГОДА. Вы сможете сдать этот экзамен до его отмены 30 июня 2021 года. Примечание&#58; экзамены отменяются в 23&#58;59 по центральному времени.</strong></font><br/><br/></div>
   <div><strong>Содержание этого экзамена было обновлено 24 ноября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
   </div>
-
+  
   Кандидатами на этот экзамен являются инженеры по обработке данных Microsoft Azure, которые совместно с представителями бизнеса определяют и выполняют требования к данным для реализации решений по работе с данными, использующих службы данных Azure.
-
+  
   Специалисты по обработке данных Azure отвечают за реализацию задач, связанных с данными, которые включают предоставление услуг хранения данных, прием потоковых и пакетных данных, преобразование данных, внедрение требований безопасности, реализацию политик хранения данных, выявление узких мест производительности и доступ к внешним источникам данных.
-
+  
   Кандидаты на этот экзамен должны уметь реализовывать решения для работы с данными, которые используют следующие службы Azure&#58; Azure Cosmos DB, Azure Synapse Analytics (ранее Azure SQL DW), Azure Data Factory, Azure Stream Analytics, Azure Databricks и Azure Blob storage.
 subTitle: 'Этот экзамен предполагает проверку ваших способностей выполнять следующие технические задачи: внедрение решений для хранения данных; управление и развитие обработки данных; мониторинг и оптимизация решений по работе с данными.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -32,6 +33,7 @@ skills:
 - Внедрение решений для хранения данных (40-45%)
 - Управление и развитие обработки данных (25-30%)
 - Мониторинг и оптимизация решений по работе с данными (30-35%)
+retirementDate: 06/30/2021
 roles:
 - data-engineer
 products:
