--- a/learn-certs-pr/exams/mb-240.yml
+++ b/learn-certs-pr/exams/mb-240.yml
@@ -6,15 +6,13 @@ metadata:
 uid: exam.mb-240
 displayName: MB-240
 summary: |-
-  <div>
-  <div><strong>Содержание этого экзамена будет обновлено 15 января 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong><br/><br/></div>
-  </div>
-
-  Кандидаты на этот экзамен являются консультантами по функциональным возможностям Dynamics 365 Customer Engagement со знанием Field Service. Кандидаты отвечают за реализацию решений, которые управляют ресурсами, которые дополняют жизненный цикл выездного обслуживания.
-
+  <div><strong>Содержание этого экзамена было обновлено 15 января 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
+  
+  Кандидаты на этот экзамен являются консультантами по функциональным возможностям Microsoft Dynamics 365 Customer Engagement со знанием «Филд Сёвис». Кандидаты отвечают за реализацию решений, которые управляют ресурсами, осуществляющими жизненный цикл выездного обслуживания.
+  
   Кандидаты реализуют процессы выездного обслуживания, разработанные в сотрудничестве со внутренними и внешними командами. Такое сотрудничество включает настройку областей администрирования по умолчанию приложения Field Service, развертывание решения Connected Field Service (IoT) и мобильного приложения, а также реализацию любых дополнительных требуемых настроек. Кандидаты отвечают за настройку и развертывание приложения Field Service в сопряжении с основным приложением для обслуживания клиентов.
-
-  Кандидаты должны иметь знания о настройке и изменении компонентов приложения обслуживания на местах, включая настройку служб, ресурсов, характеристик, инцидентов, интеграции запасов, соглашения об обслуживании, планирование ресурсов, рабочие задания, задачи обслуживания, роли пользователей при обслуживании на местах, настройки обслуживания на местах, решение Connected Field Service (IoT) и настройка мобильного приложения обслуживания на местах.
+  
+  Кандидаты должны обладать знаниями по настройке компонентов приложения «Филд Сёвис», включая настройку служб, ресурсов, характеристик, инцидентов, интеграции запасов, договоров на обслуживание, планирования ресурсов, заказов на работу, задач по обслуживанию, ролей пользователей выездного обслуживания, параметров выездного обслуживания, решения «Коннектид Филд Сёвис» (IoT) и параметров приложения «Филд Сёвис Мобайл». Кандидаты должны быть знакомы с мобильным приложением на основе Microsoft Power Apps. Данный экзамен не охватывает мобильное приложение на основе Xamarin.
 subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: настраивать приложения для выездного обслуживания; управлять заказами на выполнение работ; планировать и готовить к отправке заказы на выполнение работ; управлять мобильностью выездного обслуживания; управлять запасами и покупками; реализовывать Connected Field Service.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzxi
@@ -25,7 +23,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 15 января 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
+- Содержание этого экзамена было обновлено 15 января 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
 - Настройка приложений для выездного обслуживания (15-20%)
 - Управление заказами на выполнение работ (15-20%)
 - Планирование и подготовка к отправке заказов на выполнение работ (25-30%)
@@ -38,7 +36,7 @@ products:
 - dynamics-365
 - dynamics-field-service
 exams:
-- uid: exam.mb-200
+- uid: exam.pl-200
 courses:
 - uid: course.mb-240t00
 paths:
