--- a/learn-certs-pr/exams/mb-600.yml
+++ b/learn-certs-pr/exams/mb-600.yml
@@ -7,13 +7,14 @@ uid: exam.mb-600
 displayName: MB-600
 summary: |-
   <div>
+  <div><font color='red'><strong>НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, <a href="/learn/certifications/exams/pl-600">PL-600</a>, СТАНЕТ ДОСТУПНА В МАРТЕ 2021 ГОДА. Вы сможете сдать этот экзамен до его отмены 30 июня 2021 года.</strong></font><br/><br/></div>
   <div><strong>Содержание этого экзамена было обновлено 30 июля 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
   </div>
-
+  
   Архитекторы решений для Microsoft Dynamics 365 + Power Platform ведут успешные внедрения и фокусируются на том, как решения удовлетворяют более широкие деловые и технические потребности организаций.
-
+  
   Архитектор решений обладает функциональными и техническими знаниями о приложениях на основе моделей Power Platform в Dynamics 365, таких как служба поддержки клиентов Dynamics 365, сервисная служба Dynamics 365, Marketing Dynamics 365 и Sales Dynamics 365, соответствующие облачные решения Microsoft и других сторонних технологий. Архитектор решений применяет знания и опыт на протяжении всего проекта. Архитектор решений выполняет упреждающую и профилактическую работу, чтобы повысить ценность инвестиций клиента и улучшить работу организации. Эта роль требует умения определять возможности для решения бизнес-задач.
-
+  
   Архитекторы решений имеют опыт работы в функциональных и технических дисциплинах Power Platform и приложений в Dynamics 365, управляемых моделями. Архитекторы решений должны быть в состоянии содействовать проектным решениям на протяжении всего процесса разработки, конфигурации, интеграции, инфраструктуры, безопасности, доступности, хранения и управления изменениями. Эта роль уравновешивает бизнес-потребности проекта, отвечая функциональным и нефункциональным требованиям.
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: планирование решений и анализ требований; разработка решений; и внедрение решений.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -28,6 +29,7 @@ skills:
 - Выполнение анализа решений и анализа требований (30-35%)
 - Разработка решения (45-50%)
 - Внедрение решения (20-25%)
+retirementDate: 06/30/2021
 roles:
 - solution-architect
 products:
