--- a/learn-certs-pr/exams/ms-100.yml
+++ b/learn-certs-pr/exams/ms-100.yml
@@ -6,11 +6,10 @@ metadata:
 uid: exam.ms-100
 displayName: MS-100
 summary: |-
-  <div><div><strong>Содержание этого экзамена было обновлено 24 сентябрь 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
-  </div>
-
+  <div><font color='red'><strong>Содержание этого экзамена будет обновлено 24 февраля 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong></font><br/><br/></div>
+  
   Кандидатами на этот экзамен являются сертифицированные администраторы Microsoft 365 Enterprise, которые участвуют в оценке, планировании, переносе, развертывании и управлении службами Microsoft 365. Они выполняют задачи по управлению арендой в Microsoft 365 для организаций, в том числе управление идентификациями, безопасностью, соответствием стандартам и поддержкой технологий.
-
+  
   Кандидаты должны знать рабочие пространства Microsoft 365 и должны иметь опыт администрирования хотя бы одного рабочего пространства Microsoft 365 (Exchange, SharePoint, Skype for Business, или Windows as a Service). Кандидаты должны обладать познаниями в проектировании сетей, серверном администрировании и основных понятиях IT, таких как DNS, активная директория и PowerShell.
 subTitle: 'Этот экзамен предполагает проверку ваших способностей выполнять следующие технические задачи: проектирование и внедрение служб Microsoft 365; управление идентификацией и ролями пользователей; управление доступом и аутентификацией; и планирование рабочих пространств и приложений Office 365.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -23,7 +22,7 @@ locales:
 levels:
 - advanced
 skills:
-- Содержание этого экзамена было обновлено 24 сентябрь 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
+- Содержание этого экзамена будет обновлено 24 февраля 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
 - Разработка и внедрение служб Microsoft 365 (25-30%)
 - Управление идентификацией и ролями пользователей (35-40%)
 - Управление доступом и аутентификацией (20-25%)
