--- a/learn-certs-pr/exams/ms-101.yml
+++ b/learn-certs-pr/exams/ms-101.yml
@@ -6,12 +6,10 @@ metadata:
 uid: exam.ms-101
 displayName: MS-101
 summary: |-
-  <div>
-  <div><strong>Содержание этого экзамена было обновлено 24 ноября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
-  </div>
-
+  <div><font color='red'><strong>Содержание этого экзамена будет обновлено 24 февраля 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong></font><br/><br/></div>
+  
   Кандидатами на этот экзамен являются сертифицированные администраторы Microsoft 365 Enterprise, которые участвуют в оценке, планировании, переносе, развертывании и управлении службами Microsoft 365. Они выполняют задачи по управлению арендой в Microsoft 365 для организаций, в том числе управление идентификациями, безопасностью, соответствием стандартам и поддержкой технологий.
-
+  
   Кандидаты должны знать рабочие пространства Microsoft 365 и должны иметь опыт администрирования хотя бы одного рабочего пространства Microsoft 365 (Exchange, SharePoint, Skype for Business, или Windows as a Service). Кандидаты должны обладать познаниями в проектировании сетей, серверном администрировании и основных понятиях IT, таких как DNS, активная директория и PowerShell.
 subTitle: 'Этот экзамен предполагает проверку ваших способностей выполнять следующие технические задачи: внедрение служб современных устройств; внедрение Microsoft 365 Security and Threat Management; и управление руководством и соответствием в Microsoft 365.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -24,7 +22,7 @@ locales:
 levels:
 - advanced
 skills:
-- Содержание этого экзамена было обновлено 24 ноября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
+- Содержание этого экзамена будет обновлено 24 февраля 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
 - Внедрение служб современных устройств (30-35%)
 - Внедрение функций безопасности Microsoft 365 и управления угрозами (30-35%)
 - Управление инструментами корпоративного управления и соответствия Microsoft 365 (35-40%)
