--- a/learn-certs-pr/power-apps-and-d365-solution-architect-expert.yml
+++ b/learn-certs-pr/power-apps-and-d365-solution-architect-expert.yml
@@ -6,8 +6,10 @@ metadata:
 uid: certification.power-apps-and-d365-solution-architect-expert
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
+  <div><font color='red'><strong>ЭТА СЕРТИФИКАЦИЯ БУДЕТ ОТМЕНЕНА 30 ИЮНЯ 2021 ГОДА. После этой даты вы не сможете пройти эту сертификацию. Все сертификаты, полученные вами до дат отмены, будут по-прежнему отражаться в вашей выписке об успеваемости <a href='https://aka.ms/certdashboard'>в панели сертификации</a>.</strong></font><br/><br/></div>
+  
   Архитекторы решений для Microsoft Dynamics 365 + Power Platform ведут успешные внедрения и фокусируются на том, как решения удовлетворяют более широкие деловые и технические потребности организаций.
-
+  
   <div><br/><strong>ПРИМЕЧАНИЕ&#58; получение следующих двух сертификаций считается необходимым условием для этой сертификации. Это необходимое условие не указано ниже из-за отсутствия достаточного количества места.</strong><ul>
   <li><a href="/learn/certifications/power-platform-functional-consultant-associate">Microsoft Certified&#58; Power Platform Functional Consultant Associate</a></li>
   <li><a href="/learn/certifications/power-platform-developer-associate">Microsoft Certified&#58; Power Platform Developer Associate</a></li>
