--- a/learn-certs-pr/azure-data-engineer.yml
+++ b/learn-certs-pr/azure-data-engineer.yml
@@ -2,12 +2,14 @@
 title: 'Microsoft Certified: Azure Data Engineer Associate'
 metadata:
   title: 'Microsoft Certified: Azure Data Engineer Associate'
-  description: 'Инженеры Azure Data проектируют и внедряют управление, мониторинг, безопасность и конфиденциальность данных, используя полный стек служб данных Azure для удовлетворения потребностей бизнеса.'
+  description: 'Инженеры данных Azure интегрируют, преобразовывают и консолидируют данные из различных систем структурированных и неструктурированных данных в структуры, подходящие для создания решений для аналитики.'
 uid: certification.azure-data-engineer
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
+  <div><font color='red'><strong>ЭКЗАМЕНЫ DP-200 И DP-201 БУДУТ ЗАМЕНЕНЫ ЭКЗАМЕНОМ <a href='/learn/certifications/exams/dp-203'>EXAM DP-203</a> 23 ФЕВРАЛЯ 2021 ГОДА. Вы всё равно сможете получить этот сертификат, сдав экзамены DP-200 и DP-201 до их отмены 30 июня 2021 года.</strong></font><br/><br/></div>
+  
   Инженеры Azure Data проектируют и внедряют управление, мониторинг, безопасность и конфиденциальность данных, используя полный стек служб данных Azure для удовлетворения потребностей бизнеса.
-subTitle: Инженеры Azure Data проектируют и внедряют управление, мониторинг, безопасность и конфиденциальность данных, используя полный стек служб данных Azure для удовлетворения потребностей бизнеса.
+subTitle: Инженеры данных Azure интегрируют, преобразовывают и консолидируют данные из различных систем структурированных и неструктурированных данных в структуры, подходящие для создания решений для аналитики.
 levels:
 - intermediate
 skills:
@@ -21,16 +23,12 @@ roles:
 - data-engineer
 type: role-based
 products:
-- azure
-- azure-cosmos-db
+- azure-data-factory
+- azure-synapse-analytics
+- azure-stream-analytics
+- azure-event-hubs
 - azure-data-lake
 - azure-databricks
-- azure-notebooks
-- azure-stream-analytics
-- azure-sql-database
-- azure-storage
-- azure-monitor
-- azure-hdinsight
 courses:
 - uid: course.dp-200t01
 - uid: course.dp-201t01
