--- a/learn-certs-pr/exams/dp-201.yml
+++ b/learn-certs-pr/exams/dp-201.yml
@@ -7,13 +7,14 @@ uid: exam.dp-201
 displayName: DP-201
 summary: |-
   <div>
+  <div><font color='red'><strong>НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, <a href='/learn/certifications/exams/dp-203'>DP-203</a>, СТАНЕТ ДОСТУПНА 23 ФЕВРАЛЯ 2021 ГОДА. Вы сможете сдать этот экзамен до его отмены 30 июня 2021 года. Примечание&#58; экзамены отменяются в 23&#58;59 по центральному времени.</strong></font><br/><br/></div>
   <div><strong>Содержание этого экзамена было обновлено 31 июля 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
   </div>
-
+  
   Кандидатами на этот экзамен являются инженеры по работе с данными Microsoft Azure, которые совместно с представителями бизнеса определяют и выполняют требования к данным для проектирования решений по работе с данными, использующих службы данных Azure.
-
+  
   Инженеры данных Azure отвечают за задачи, проектных связанные с данными, включая разработку решений для хранения данных Azure, использующих реляционные и нереляционные хранилища данных, решения для пакетной обработки данных и обработки данных в реальном времени, а также решения для обеспечения безопасности и соответствия требованиям.
-
+  
   Кандидаты на этот экзамен должны уметь разработать решения для данных, использующие следующие службы Azure&#58; Azure Cosmos DB, Azure Synapse Analytics, Azure Data Lake Storage, Azure Data Factory, Azure Stream Analytics, Azure Databricks, и хранилище BLOB-объектов Azure.
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: разработка решений для хранения данных Azure; решения для обработки проектных данных; и проектирование для обеспечения безопасности данных и соответствия требованиям.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -32,6 +33,7 @@ skills:
 - Разработка решений для хранения данных Azure (40-45%)
 - Решения для обработки проектных данных (25-30%)
 - Разработка для безопасности данных и соответствия (25-30%)
+retirementDate: 06/30/2021
 roles:
 - data-engineer
 products:
