--- a/learn-certs-pr/exams/mb-210.yml
+++ b/learn-certs-pr/exams/mb-210.yml
@@ -6,14 +6,12 @@ metadata:
 uid: exam.mb-210
 displayName: MB-210
 summary: |-
-  <div>
   <div><strong>Содержание этого экзамена было обновлено 2 октября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
-  </div>
-
+  
   Кандидатами на этот экзамен являются Функциональные консультанты Dynamics 365 с опытом продаж. Кандидаты несут ответственность за внедрение решений, поддерживающих жизненный цикл продаж для эффективного и действенного выполнения задач по достижению доходов, бизнес-стратегий и целей компании.
-
+  
   Кандидаты отвечают за настройку и расширение основных функций потенциальных клиентов, контактов, учетных записей, возможностей и вспомогательных организаций для сопоставления с процессами продаж, происходящими в компании. Они выявляют возможности использования Power Apps для разработки унифицированных интерфейсов для всех устройств, Power Automate для интеграции приложений, потоков бизнес-процессов и других инструментов автоматизации для создания приложения, которое поддерживает и ускоряет потенциального клиента к расходованию денежных средств».
-
+  
   Кандидаты должны обладать глубокими деловыми знаниями и, желательно, опытом от первого лица в мире продаж в одной или нескольких ролях продаж.
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: выполнять настройку, управлять основными торговыми предприятиями и настраивать дополнительные инструменты и службы.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -35,7 +33,7 @@ products:
 - dynamics-365
 - dynamics-sales
 exams:
-- uid: exam.mb-200
+- uid: exam.pl-200
 courses:
 - uid: course.mb-210t01
 paths:
