--- a/learn-certs-pr/exams/mb-220.yml
+++ b/learn-certs-pr/exams/mb-220.yml
@@ -6,14 +6,12 @@ metadata:
 uid: exam.mb-220
 displayName: MB-220
 summary: |-
-  <div>
-  <div><strong>Содержание этого экзамена будет обновлено 15 января 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong><br/><br/></div>
-  </div>
-
+  <div><strong>Содержание этого экзамена было обновлено 15 января 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
+  
   Кандидаты на этот экзамен являются консультантами по функциональным возможностям Dynamics 365 Marketing. Кандидаты отвечают за реализацию решений, которые привлекают и конвертируют лидов, повышают уровень узнаваемости бренда, стандартизируют ведение коммуникации по различным каналам и предоставляют маркетинговую информацию.
-
+  
   Кандидаты несут ответственность за настройку и расширение основного маркетингового приложения, чтобы включить в него маркетинг по электронной почте, настройку, интерактивные поездки клиентов, "обработка" лидов с персонализированным опытом, интеграция с LinkedIn, мероприятия, Опросы, целевые страницы, сегментация и оценка, а также соблюдение Генерального регламента о защите персональных данных (GDPR).
-
+  
   Кандидаты должны обладать знаниями о принципах маркетинга и роли маркетинговых приложений применительно к набору приложений Dynamics 365, включая интеграцию с приложениями Dynamics 365 и Microsoft 365.
 subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: настраивать маркетинговые приложения; управлять сегментами и списками; создавать маркетинговые формы и страницы и управлять ими; управлять лидами, контактами и учетными записями; создавать маркетинговые электронные письма и управлять ими; управлять циклом взаимодействия с клиентом; управлять событиями и вебинарами; настраивать Dynamics 365 Customer Voice.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -25,7 +23,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 15 января 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.
+- Содержание этого экзамена было обновлено 15 января 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
 - Настройка маркетинговых приложений (20-25%)
 - Управление сегментами и списками (5-10%)
 - Создание и управление маркетинговыми формами и страницами (10-15%)
@@ -40,7 +38,7 @@ products:
 - dynamics-365
 - dynamics-marketing
 exams:
-- uid: exam.mb-200
+- uid: exam.pl-200
 courses:
 - uid: course.mb-220t00
 paths:
