--- a/learn-certs-pr/exams/mb-230.yml
+++ b/learn-certs-pr/exams/mb-230.yml
@@ -6,15 +6,13 @@ metadata:
 uid: exam.mb-230
 displayName: MB-230
 summary: |-
-  <div>
   <div><strong>Содержание этого экзамена было обновлено 2 октября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
-  </div>
-
+  
   Dynamics 365 Customer Service Functional Consultant отвечает за внедрение омниканальных решений, ориентированных на обслуживание, качество, надежность, эффективность и удовлетворенность клиентов.
   <br/>
-
+  
   Dynamics 365 Customer Service Functional Consultant реализует и разрабатывает визуализации и отчеты для управления службами, разрабатываемыми архитектором решения и в сотрудничестве с ним. Functional Consultant сотрудничает с администратором по работе с клиентами для внедрения и обновления компонентов Power Platform, включая управление знаниями, отзывы клиентов и подключенные службы.
-
+  
   Dynamics 365 Customer Service Functional Consultant должен обладать глубокими практическими знаниями в области обслуживания клиентов, в том числе&#58; понимание отраслевой терминологии, приоритетов, стандартов, методологий, операций по обслуживанию клиентов и передового опыта. Functional Consultant, обладающий опытом обслуживания клиентов, должен иметь сильные практические знания по удовлетворению потребностей пользователей с помощью службы поддержки клиентов Dynamics 365, включая глубокое понимание дел, управление знаниями, очереди, права, планирование ресурсов, соглашения об уровне обслуживания (SLA), визуализации, подключенные службы, Customer Service Insights, Power Virtual Agents и омниканальность для клиентских служб. Знания функционального консультанта должны включать всестороннее понимание роли приложения обслуживания клиентов по отношению к набору приложений Dynamics 365, а также базовое понимание архитектуры решения и обеспечения качества.
 subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: управлять кейсами и управление знаниями; управлять очередями, правами и соглашениями об уровне обслуживания; реализовывать планирование; внедрять омниканальность для обслуживания клиентов; и управлять аналитикой.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -38,7 +36,7 @@ products:
 - dynamics-365
 - dynamics-customer-service
 exams:
-- uid: exam.mb-200
+- uid: exam.pl-200
 courses:
 - uid: course.mb-230t01
 paths:
